--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/reset.css">
+    <link rel="stylesheet" href="estilo/estilo.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <title>Dj Rocco</title>
 </head>
 <body>
     <header>
-        <h1 class="logo">
+        <div class="caixa_topo">
             <img src="imagens/logo/logo_transparente.png" alt="Logo do Dj Rocco">
-        </h1>
+            <h1>DJ ROCCO</h1>
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Fotos</a></li>
+                    <li><a href="index.html">Videos</a></li>
+                    <li><a href="index.html">Agenda</a></li>
+                    <li><a href="index.html">Contato</a></li>
+                </ul>
+            </nav>
+            <nav class="redes_sociais">
+                <ul>
+                    <li><a href="#" target="blanch"><img src="imagens/icones/facebook.png" alt="Facebook"></a></li>
+                    <li><a href="#" target="blanch"><img src="imagens/icones/youtube.png" alt="Youtube"></a></li>
+                    <li><a href="home.html" target="blanch"><img src="imagens/icones/whattsapp.png" alt="Whattsapp"></a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <h1>TItulo do conteudo</h1>
