--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="redes_sociais">
                 <ul>
                     <li><a href="#" target="blanch"><img src="imagens/icones/facebook.png" alt="Facebook"></a></li>
-                    <li><a href="#" target="blanch"><img src="imagens/icones/youtube.png" alt="Youtube"></a></li>
+                    <li><a href="https://www.youtube.com/jeffersonrocco/" target="blanch"><img src="imagens/icones/youtube.png" alt="Youtube"></a></li>
                     <li><a href="home.html" target="blanch"><img src="imagens/icones/whattsapp.png" alt="Whattsapp"></a></li>
                 </ul>
             </nav>
