--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="estilo/reset.css">
     <link rel="stylesheet" href="estilo/estilo.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <title>Dj Rocco</title>
 </head>
 <body>
@@ -23,9 +25,9 @@
             </nav>
             <nav class="redes_sociais">
                 <ul>
-                    <li><a href="#" target="blanch"><img src="imagens/icones/facebook.png" alt="Facebook"></a></li>
+                    <li><a href="https://www.facebook.com/THEDJROCCO" target="blanch"><img src="imagens/icones/facebook.png" alt="Facebook"></a></li>
                     <li><a href="https://www.youtube.com/jeffersonrocco/" target="blanch"><img src="imagens/icones/youtube.png" alt="Youtube"></a></li>
-                    <li><a href="home.html" target="blanch"><img src="imagens/icones/whattsapp.png" alt="Whattsapp"></a></li>
+                    <li><a href="#" target="blanch"><img src="imagens/icones/whattsapp.png" alt="Whattsapp"></a></li>
                 </ul>
             </nav>
         </div>
