--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             </nav>
         </div>
     </header>
+    <div class="imagem_index">
+        <img src="imagens/f3dcfc4c-752d-4173-94bf-7a42a0ee47df.JPG" alt="Foto da controladora em festa">
+    </div>
     <main>
         <h1>TItulo do conteudo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime magni quasi neque? Consectetur, quasi, nihil, cupiditate temporibus molestiae ducimus veniam commodi est sit officia repudiandae alias assumenda doloribus corporis laborum!</p>
