--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <header>
+        <div class="banner">
+            <img src="imagens/conteudo/banner.png" width="100%" height="300x" alt="Festa ao fundo com muitas pessoas e na frente uma controladoria de Dj">
+        </div>
         <div class="caixa_topo">
             <img src="imagens/logo/logo_transparente.png" alt="Logo do Dj Rocco">
             <h1>DJ ROCCO</h1>
@@ -25,24 +28,38 @@
             </nav>
             <nav class="redes_sociais">
                 <ul>
-                    <li><a href="https://www.facebook.com/THEDJROCCO" target="blanch"><img src="imagens/icones/facebook.png" alt="Facebook"></a></li>
-                    <li><a href="https://www.youtube.com/jeffersonrocco/" target="blanch"><img src="imagens/icones/youtube.png" alt="Youtube"></a></li>
-                    <li><a href="#" target="blanch"><img src="imagens/icones/whattsapp.png" alt="Whattsapp"></a></li>
+                    <li><a href="https://www.facebook.com/THEDJROCCO" target="_BLANK">
+                        <img class="efeitos-pb" id="facebook" src="imagens/icones/facebook-pb.png" alt="Whattsapp" width="60px" height="60px">
+                        <img class="efeitos-c" id="facebook" src="imagens/icones/facebook-c.png" alt="Whattsapp" width="60px" height="60px"></a>
+                    </li>
+                    <li><a href="https://www.youtube.com/jeffersonrocco/" target="_BLANK">
+                        <img class="efeitos-pb" id="youtube" src="imagens/icones/youtube-pb.png" alt="Whattsapp" width="60px" height="60px">
+                        <img class="efeitos-c" id="youtube" src="imagens/icones/youtube-c.png" alt="Whattsapp" width="60px" height="60px"></a>
+                    </li>
+                    <li><a href="#" target="_BLANK">
+                        <img class="efeitos-pb" id="whattsapp" src="imagens/icones/whattsapp-pb.png" alt="Whattsapp" width="60px" height="60px">
+                        <img class="efeitos-c" id="whattsapp" src="imagens/icones/whattsapp-c.png" alt="Whattsapp" width="60px" height="60px"></a>
+                    </li>
+                    <li><a href="#" target="_BLANK">
+                        <img class="efeitos-pb" id="instagram" src="imagens/icones/instagram-pb.png" alt="Whattsapp" width="60px" height="60px">
+                        <img class="efeitos-c" id="instagram" src="imagens/icones/instagram-c.png" alt="Whattsapp" width="60px" height="60px"></a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div class="imagem_index">
-        <img src="imagens/conteudo/banner.png" alt="Foto da controladora em festa">
-    </div>
     <main>
-        <h1>TItulo do conteudo</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime magni quasi neque? Consectetur, quasi, nihil, cupiditate temporibus molestiae ducimus veniam commodi est sit officia repudiandae alias assumenda doloribus corporis laborum!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi non delectus facere ipsum aut esse eos culpa accusamus maiores officiis! Ab officiis esse harum minus itaque, iusto debitis exercitationem natus?</p>
-    </main>
+        <section class="principal">
+            <h1>Título do conteudo</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime magni quasi neque? Consectetur, quasi, nihil, cupiditate temporibus molestiae ducimus veniam commodi est sit officia repudiandae alias assumenda doloribus corporis laborum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi non delectus facere ipsum aut esse eos culpa accusamus maiores officiis! Ab officiis esse harum minus itaque, iusto debitis exercitationem natus?</p>
+    </section>
+</main>
     <footer>
-        <img src="imagens/logo/logo_transparente.png" alt="Logo do Dj Rocco">
-        <p class="copyright">&copy; Copyright Dj Rocco - 2020</p>
+        <div class="rodape">
+            <img src="imagens/logo/logo_transparente.png" alt="Logo do Dj Rocco">
+            <p class="copyright">&copy; Copyright Dj Rocco - 2020</p>
+        </div>
     </footer>
 </body>
 </html>
