--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
     <title>Dj Rocco</title>
 </head>
 <body>
     <header>
         <div class="banner">
-            <img src="imagens/conteudo/banner.png" width="100%" height="300x" alt="Festa ao fundo com muitas pessoas e na frente uma controladoria de Dj">
+            <img src="imagens/conteudo/banner.png" width="100%" height="293x" alt="Festa ao fundo com muitas pessoas e na frente uma controladoria de Dj">
         </div>
         <div class="caixa_topo">
             <img src="imagens/logo/logo_transparente.png" alt="Logo do Dj Rocco">
@@ -50,11 +51,21 @@
         </div>
     </header>
     <main>
-        <section class="principal">
-            <h1>Título do conteudo</h1>
+        <section class="quem-somos">
+            <img src="imagens/conteudo/sobre.png" alt="Dj Rocco animando a festa">
+            <h2 class="titulo">Sobre o Dj Rocco</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime magni quasi neque? Consectetur, quasi, nihil, cupiditate temporibus molestiae ducimus veniam commodi est sit officia repudiandae alias assumenda doloribus corporis laborum!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi non delectus facere ipsum aut esse eos culpa accusamus maiores officiis! Ab officiis esse harum minus itaque, iusto debitis exercitationem natus?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia inventore voluptate, ab libero fugiat sunt voluptatem vitae dignissimos eos vero veritatis reiciendis, nobis necessitatibus eaque quia esse, suscipit eius eveniet.</p>
     </section>
+
+    <section class="quem-somos">
+        <img src="imagens/conteudo/sobre.png" alt="Dj Rocco animando a festa">
+        <h2 class="titulo">Lista de serviços</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime magni quasi neque? Consectetur, quasi, nihil, cupiditate temporibus molestiae ducimus veniam commodi est sit officia repudiandae alias assumenda doloribus corporis laborum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi non delectus facere ipsum aut esse eos culpa accusamus maiores officiis! Ab officiis esse harum minus itaque, iusto debitis exercitationem natus?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia inventore voluptate, ab libero fugiat sunt voluptatem vitae dignissimos eos vero veritatis reiciendis, nobis necessitatibus eaque quia esse, suscipit eius eveniet.</p>
+</section>
 </main>
     <footer>
         <div class="rodape">
